# authorization-prototype

./: LICENSE.md  README.md  README.md.sh  authorization.py  object.json  pyproject.toml
