[tool.poetry]
name = "authorization-prototype"
version = "0.1.0"
description = ""
authors = ["Gabor Schulz <gabor@gaborschulz.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"
pylint = "^2.15.6"
mypy = "^0.991"
pytest-pylint = "^0.19.0"
pytest-mypy = "^0.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests", "migrations"]

[tool.pytest.ini_options]
python_files = "tests.py test_*.py"
addopts = "--pylint --mypy"

[tool.mypy]
exclude = [
    'migrations',
    'tests'
]
ignore_missing_imports = "True"

[tool.pylint.'MASTER']
ignore = "migrations,tests"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 160
disable = """
    missing-module-docstring,
    duplicate-code,
    too-many-ancestors
"""